--- a/bear-about.html
+++ b/bear-about.html
@@ -6,15 +6,15 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>最新消息</title>
-    <link rel="stylesheet" href="style.css">
+    <title>關於我們</title>
+    <link rel="stylesheet" href="./css/style.css"">
     <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
      <!------------------------- loading ------------------------->
-     <div class="loading">
+     <!-- <div class="loading">
         <div class="anibg">
             <div class="aniL"></div>
             <div class="aniR"></div>
@@ -34,7 +34,7 @@
                 <div class="aniLine"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!------------------------- title ------------------------->
     <div class="wrap">
@@ -141,21 +141,26 @@
 
     <div class="wrap">
         <div class="bear-about-concept container">
-            <div class="bear-about-concept-flex row">
-                <div class="bear-about-concpet-title col-12">
+            <div class="bear-about-row-flex row">
+                <div class="bear-about-title col-12">
                     <h3>故事館成立概念</h3>
                 </div>
-                <div class="bear-about col-12 col-md-6">
-                    <h3>故事館的由來</h3>
-                    <p>近年來有關台灣瀕臨絕種動物的新聞層出不窮，從苗栗漠視石虎保育、台灣黑熊斷掌到南安小熊落單的事件，讓我們決定在保育方面盡一份心力，透過網路以動態圖像互動的方式，述說台灣黑熊的故事，藉此讓更多人輕鬆認識台灣特有種的美麗。</p>
-                </div>
-                <div class="bear-about col-6 col-md-3">
-                    <h3>故事館的LOGO</h3>
-                    <p>意象來自黑熊胸前的V，背景的漸層色跟V行兩側不同的白色帶出立體感。</p>
-                </div>
-                <div class="bear-about col-5 col-md-3">
-                    <h3>網頁製作</h3>
-                    <p>賴正軒<br>tadashiLai</p>
+                <div class="bear-about-flex">
+                    <div class="bear-about col-12 col-md-6">
+                        <h3>故事館的由來</h3>
+                        <p>近年來有關台灣瀕臨絕種動物的新聞層出不窮，從苗栗視石虎保育、台灣黑熊斷掌到南安小熊落單的事件，讓我決定在保育方面盡一份心力，透過網路以動態圖像互動的式，述說台灣黑熊的故事，藉此讓更多人輕鬆認識台灣特種的美麗。</p>
+                    </div>
+                    <div class="bear-about col-6 col-md-3">
+                        <h3>故事館的LOGO</h3>
+                        <p>意象來自黑熊胸前的V，背景的漸層色跟V行兩側不同的色帶出立體感。</p>
+                    </div>
+                    <div class="bear-about col-5 col-md-3">
+                        <h3>網頁製作</h3>
+                        <p>賴正軒<br>tadashiLai</p>
+                        <div id="bear-about-me" class="mycol-4">
+                            <h5>檢視程式碼</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -164,29 +169,81 @@
 
      <div class="wrap">
             <div class="bear-about-tech container">
-                <div class="bear-about-tech-flex row">
-                    <div class="bear-about-tech-title col-12">
-                        <h3>網頁使用技術</h3>
+                <div class="bear-about-row-flex row">
+                    <div class="bear-about-title col-12">
+                        <h2>網站目標客群</h2>
                     </div>
-                    <div class="bear-about col-12 col-md-7">
-                        <h3>排版</h3>
-                        <p>主要使用格線系統進行排版，搭配float, position跟display屬性(inline-block, flex)等運用</p>
+                    <div class="bear-about-tech-item-shell col-12 col-md-6">
+                        <h3>教育相關</h3>
+                        <div class="bear-about-pic col-12"></div>
+                        <div class="bear-about-flex">
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="bear-about col-8 col-md-5">
-                        <h3>動態圖像</h3>
-                        <p>以CSS3的transition及animation為主，搭配JavaScript進行物件操控</p>
-                    </div>
-                    <div class="bear-about col-6 col-md-3">
-                        <h3>表單驗證</h3>
-                        <p>使用JavaScript語法，搭配正規表達式進行表單的資料驗證</p>
-                    </div>
-                    <div class="bear-about col-6 col-md-3">
-                        <h3>選單製作</h3>
-                        <p>使用CSS3 checkbox選取器搭配animation與transition製作</p>
+                    <div class="bear-about-tech-item-shell col-12 col-md-6">
+                        <h3>教育相關</h3>
+                        <div class="bear-about-pic col-12"></div>
+                        <div class="bear-about-flex">
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                            <div class="bear-about col-4">
+                                <h3>黑熊故事</h3>
+                                <p>黑熊故事wow</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+     <!----------------------- bear about git----------------------->
+
+     <div class="wrap">
+         <div id="bear-about-git" class="bear-about-concept container">
+             <div class="bear-about-row-flex row">
+                 <div class="bear-about-title col-12">
+                     <h2>檢視程式碼</h2>
+                 </div>
+                <div class="bear-about-flex">
+                    <div id="github-1" class="bear-about col-12">
+                        <h3>台灣黑熊故事館</h3>
+                        <div class="col-3">
+                            <i class="fa fa-html5" aria-hidden="true"></i>
+                            <p>HTML5</p>
+                        </div>
+                        <div class="col-3">
+                            <i class="fa fa-css3" aria-hidden="true"></i>
+                            <p>CSS3</p>
+                        </div>
+                        <div class="col-3">
+                            <i class="fa fa-sass"></i>
+                            <p>SASS</p>
+                        </div>
+                        <div class="col-3">
+                            <p>JavaScript</p>
+                        </div>
+                    </div>
+                </div>
+             </div>
+         </div>
+     </div>
 
     <!------------------------- drop ------------------------->
     <div class="wrap">
