--- a/bear-news-1.html
+++ b/bear-news-1.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>最新消息</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
@@ -142,176 +142,97 @@
     <div class="wrap">
         <div class="bear-news-video-hot container">
             <div class="row">
+                <div class="bear-news-video-search-title">
+                    <h3>搜尋過去的消息</h3>
+                </div>
+                <div class="bear-search-shell col-8">
+                    <div class="bear-search-bar col-12">
+                        <input class="bear-search-text col-10">
+                        <input type="submit" class="bear-search-submit col-2" value="查詢">
+                    </div>
+                    <ul class="bear-search-tag-shell col-12">
+                        <li id="all" class="bear-search-tag">全部消息</li>
+                        <li id="lect" class="bear-search-tag">講座活動</li>
+                        <li id="found" class="bear-search-tag">募資活動</li>
+                        <li id="event" class="bear-search-tag">黑熊活動</li>
+                    </ul>
+                </div>
                 <div class="bear-news-video-hot-title col-12">
                     <h3>最新消息</h3>
                 </div>
                 <div class="bear-news-hot col-12">
-                    <div class="bear-news-slide">
-                        <div class="para">
-                            <h3 class="para-lect">講座活動</h3>
-                            <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
+                    <div class="bear-news-slide-shell col-12">
+                        <div class="bear-news-slide">
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-lect">講座活動</h3>
+                                    <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-found">募資活動</h3>
+                                    <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-lect">講座活動</h3>
+                                    <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-event">黑熊活動</h3>
+                                    <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-event">黑熊活動</h3>
+                                    <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-event">黑熊活動</h3>
+                                    <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-found">募資活動</h3>
+                                    <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-event">黑熊活動</h3>
+                                    <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
+                                </a>
+                            </div>
+                            <div class="para">
+                                <a href="bear-news-1.html">
+                                    <h3 class="para-found">募資活動</h3>
+                                    <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
+                </div>
+                <div class="bear-news-pages">
+                    <ul>
+                        <li>前一頁</li>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>下一頁</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!----------------------- bear news video search ----------------------->
-
-    <div class="wrap">
-        <div class="bear-news-video-search container">
-            <div class="row">
-                <div class="bear-news-video-search-title">
-                    <h3>搜尋過去的消息</h3>
-                </div>
-                <div class="bear-news-video-search-shell col-12">
-                    <div class="bear-search-bar col-8">
-                        <input class="bear-search-text col-10">
-                        <input type="button" class="bear-search-submit col-2" value="查詢">
-                    </div>
-                </div>
-                <div class="bear-news-video-theme-link-shell col-12">
-                    <div class="bear-news-video-theme-link col-3">
-                        <h3>講座活動</h3>
-                    </div>
-                    <div class="bear-news-video-theme-link col-3">
-                        <h3>募資活動</h3>
-                    </div>
-                    <div class="bear-news-video-theme-link col-3">
-                        <h3>黑熊活動</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!----------------------- bear news video theme 1 ----------------------->
-
-    <div class="wrap">
-        <div class="bear-news-video-theme theme-1 container">
-            <div class="row">
-                <div class="bear-news-video-title col-12">
-                    <h3>講座活動</h3>
-                    <p>這個單元收錄了更深入的台灣黑熊影片</p>
-                </div>
-                <div class="bear-news-normal col-12">
-                    <div class="bear-news-slide">
-                        <div class="para">
-                            <h3 class="para-lect">講座活動</h3>
-                            <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-lect">講座活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-lect">講座活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-lect">講座活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!----------------------- bear news video theme 2 ----------------------->
-
-    <div class="wrap">
-        <div class="bear-news-video-theme theme-2 container">
-            <div class="row">
-                <div class="bear-news-video-title col-12">
-                    <h3>募資活動</h3>
-                    <p>這個單元收錄了更深入的台灣黑熊影片</p>
-                </div>
-                <div class="bear-news-normal col-12">
-                    <div class="bear-news-slide">
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!----------------------- bear news video theme 3 ----------------------->
-
-    <div class="wrap">
-        <div class="bear-news-video-theme theme-3 container">
-            <div class="row">
-                <div class="bear-news-video-title col-12">
-                    <h3>黑熊活動</h3>
-                    <p>這個單元收錄了更深入的台灣黑熊影片</p>
-                </div>
-                <div class="bear-news-normal col-12">
-                    <div class="bear-news-slide">
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+ 
     <!------------------------- drop ------------------------->
     <div class="wrap">
         <section class="drop">
