--- a/bear-support-1.html
+++ b/bear-support-1.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>線上捐款</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
@@ -149,7 +149,7 @@
         <div class="bear-support-form-shell container">
             <div class="row">
                 <div class="bear-support-form-title col-8">
-                    <h3>非常感謝您的加入，請完成以下清單:</h3>
+                    <h3>非常感謝您的加入！<br>請完成以下清單:</h3>
                 </div>
                 <div class="bear-support-form col-8">
                     <form action="bear-support-1.html">
@@ -196,7 +196,7 @@
                             <input type="text" name="founderAddr" id="founder-addr" class="col-8">
                         </div>
                         <div class="check col-12">
-                            <label>備註</label>
+                            <label>您想說的話</label>
                             <textarea name="founderRemark" id="founder-remark" class="col-8"></textarea>
                         </div>
                         <div class="check col-12">
@@ -212,7 +212,7 @@
                             </ul>
                         </div>
                         <div class="check-final">
-                            <h3>您的捐款金額為新台幣<span id="money-final">0</span>元整</h3>
+                            <h3>您的捐款金額為<br>新台幣<span id="money-final">0</span>元</h3>
                         </div>
                         <input id="check-submit" class="check-submit col-6" type="button" value="送出">
                     </form>
