--- a/index.html
+++ b/index.html
@@ -258,25 +258,14 @@
                 </div>
                 <div class="bear-search-shell col-8">
                     <div class="bear-search-bar col-12">
-                        <form action="./index.html"">
-                            <input class="bear-search-text col-10">
-                            <input type="submit"" class="bear-search-submit col-2" value="查詢">
-                        </form>
+                        <input class="bear-search-text col-10">
+                        <input type="submit" class="bear-search-submit col-2" value="查詢">
                     </div>
                     <ul class="bear-search-tag-shell col-12">
-                        <a href="bear-news-1.html">
-                            <li id="lect" class="bear-search-tag">講座活動</li>
-                        </a>
-                        <a href="bear-news-1.html">
-                            <li id="found" class="bear-search-tag">募資活動</li>
-                        </a>
-                        <a href="bear-news-1.html">
-                            <li id="event" class="bear-search-tag">黑熊活動</li>
-                        </a>
-                        <a href="bear-news-2.html">
-                            <li id="mvsearch"" class="bear-search-tag">深入探討</li>
-
-                        </a>
+                        <li id="all" class="bear-search-tag">全部消息</li>
+                        <li id="lect" class="bear-search-tag">講座活動</li>
+                        <li id="found" class="bear-search-tag">募資活動</li>
+                        <li id="event" class="bear-search-tag">黑熊活動</li>
                     </ul>
                 </div>
                 <div class="bear-news-slide-shell col-12">
@@ -299,43 +288,23 @@
                                 <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
                             </a>
                         </div>
-                    </div>
-                </div>
-                <div class="bear-news-slide-shell col-12">
-                    <div class="bear-news-slide">
-                        <div class="video">
-                            <a href="bear-news-2.html">
-                                <h3 class="video-tag">深入探討</h3>
-                                <p class="video-name">你所不知道的台灣黑熊現況威脅全面解析</p>
+                        <div class="para">
+                            <a href="bear-news-1.html">
+                                <h3 class="para-event">黑熊活動</h3>
+                                <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
                             </a>
                         </div>
                         <div class="para">
                             <a href="bear-news-1.html">
-                                <h3 class="para-found">募資活動</h3>
-                                <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
+                                <h3 class="para-event">黑熊活動</h3>
+                                <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
                             </a>
                         </div>
-                        <div class="video">
-                            <a href="bear-news-2.html">
-                                <h3 class="video-tag">深入探討</h3>
-                                <p class="video-name">你所不知道的台灣黑熊現況威脅全面解析</p>
+                        <div class="para">
+                            <a href="bear-news-1.html">
+                                <h3 class="para-event">黑熊活動</h3>
+                                <p>黑熊遊行即將在108年10月19日登場！現場有48組表演團體以及超過百攤熱愛動物的創作夥伴，推廣熱愛動物的心，歡迎一起來參與這場盛會！</p>
                             </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="bear-news-slide-shell col-12">
-                    <div class="bear-news-slide">
-                        <div class="para">
-                            <h3 class="para-event">黑熊活動</h3>
-                            <p>108年10/17(五)的黑熊講座今日起開放報名囉！報名截止只到8/31(六)，歡迎各位踴躍參加活動</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
-                        </div>
-                        <div class="para">
-                            <h3 class="para-found">募資活動</h3>
-                            <p>「黑熊故事第二季」募資進度已達標！尚有5天歡迎各位參與分享。</p>
                         </div>
                     </div>
                 </div>
