--- a/bear-know-4.html
+++ b/bear-know-4.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>黑熊危機</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
