--- a/bear-support-2.html
+++ b/bear-support-2.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>物資捐贈</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
@@ -181,6 +181,9 @@
                             <p class="bear-support-list-item-amount"></p>
                         </li>
                     </ul>
+                    <div id="bear-support-list-join">
+                        <h3>參與贊助</h3>
+                    </div>
                 </div>
             </div>
         </div>
@@ -188,11 +191,11 @@
 
     <!----------------------- bear support form ----------------------->
 
-    <div class="wrap">
+    <div id="bear-support-form-wrap" class="wrap">
         <div class="bear-support-form-shell container">
             <div class="row">
                 <div class="bear-support-form-title col-8">
-                    <h3>非常感謝您的加入，請完成以下清單:</h3>
+                    <h3>非常感謝您的加入<br>請完成以下清單:</h3>
                 </div>
                 <div class="bear-support-form col-8">
                     <form action="">
@@ -310,7 +313,7 @@
                             </ul>
                         </div>
                         <div class="check-final">
-                            <h3>您要捐贈的物資為<span id="item-final"></span></h3>
+                            <h3>您要捐贈的物資為<br><span id="item-final"></span></h3>
                         </div>
                         <input id="check-submit" class="check-submit col-6" type="button" value="送出">
                     </form>
